bug fix of midnight about the rollreceive calculation of dependencies